--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-tx', version: '5.1.2.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.7.Final'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
     compile group: 'com.h2database', name: 'h2', version: '1.4.197'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
